--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -2,7 +2,8 @@
 
   - name: Create or delete users based on their state
     hosts: localhost
-    become: true
+    #become: true
+    become_user: root
     gather_facts: true
     collections:
       - ansible.posix
