--- a/users.yml
+++ b/users.yml
@@ -1,7 +1,7 @@
 users_list:
   - username: testuser
     type: admin
-    state: absent
+    state: present
   - username: testuser1
     type: normal
-    state: absent
+    state: present
