--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -1,7 +1,7 @@
 ---
 
   - name: Create or delete users based on their state
-    hosts: localhost
+    hosts: 10.13.101.32
     #become: true
     become_user: root
     gather_facts: true
