--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -71,7 +71,7 @@
       - name: Set the authorized_keys file for each user in users.yml
         ansible.posix.authorized_key:
           user: "{{ item.username }}"
-          key: "{{ lookup('file', 'TestKeys/{{item.username}}.pub') }}"
+          key: "{{ lookup('file', 'github.com/bhincean/TestKeys/{{item.username}}.pub') }}"
         when: item.get('state', 'present') == 'present'
         with_items: "{{ users_list }}"
 
