--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -1,9 +1,9 @@
 ---
 
   - name: Create or delete users based on their state
-    hosts: webservers
-    become: true
-    #become_user: root
+    hosts: all
+    #become: true
+    become_user: root
     gather_facts: true
     collections:
       - ansible.posix
