--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -17,8 +17,8 @@
 
       - name: Copy SSH Keys to remote directories
         ansible.builtin.copy:
-          src: /var/lib/ol-automation-manager/projects/_8__gitsynch/keys
-          dest: /var/lib/ol-automation-manager/projects/_8__gitsynch/keys
+          src: /home/hinceanb/git/keys
+          dest: /home/hinceanb/git/keys
           force: true
 
 
