--- a/users.yml
+++ b/users.yml
@@ -1,9 +1,9 @@
 users_list:
   - username: testuser
     type: admin
-    state: absent
+    state: present
     locked: false
   - username: testuser1
     type: normal
-    state: absent
+    state: present
     locked: false
