--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -7,6 +7,7 @@
     gather_facts: true
     collections:
       - ansible.posix
+      - ansible.mail
 
     pre_tasks:
       - name: Include the file containing the users to be added
