--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,5 @@
 collections:
   - name: ansible.utils
   - name: ansible.posix
-  - name: community.general.mail
+  - name: ansible.community.general.mail
 
