--- a/date_dirs.yml
+++ b/date_dirs.yml
@@ -17,9 +17,8 @@
         register: stat_result
 
       - set_fact:
-          dates: "{{ dates | default([]) + 
-          [{ 'time': item.stat.mtime, 
-          'name': item.stat.path }] }}"
+          dates: "{{ dates | default([]) + [{ 'time': item.stat.mtime, 
+          'name': item.stat.path | replace ('.pub', '')| split ('/') | last }] }}"
         with_items: "{{ stat_result.results }}"
 
       - local_action: copy content={{ dates }} dest=dates/dates.yml
@@ -28,13 +27,19 @@
        
 
       - name: Display the Dictionary
-        debug: var=list_dates
-      - debug:
-          var: "stat_result.results[{{ item }}].stat.mtime"
-        with_sequence: start=0 end=1
-      - debug:
-          var: "stat_result.results[{{ item }}].stat.path"
-        with_sequence: start=0 end=1
+        debug: var=dates
+        #----------------JSON------------------------------
+        #- debug:
+        #  var: "stat_result.results[{{ item }}].stat.mtime"
+        #with_sequence: start=0 end=1
+        
+
+      - name: Display keys in dates
+        debug:
+          var: item.name
+          #var: item.time + 31556926  #send email here when condition 
+        when:  item.time >= (item.time + 31556926)
+        with_items: "{{ dates }}"
 
 
 
