--- a/dates/dates.yml
+++ b/dates/dates.yml
@@ -1,1 +1,1 @@
-[{"time": 1698316144.6332304, "name": "keys/testuser.pub"}, {"time": 1698316147.934189, "name": "keys/testuser1.pub"}]
+[{"time": 1698316144.6332304, "name": "testuser"}, {"time": 1698316147.934189, "name": "testuser1"}]
