--- a/date_dirs.yml
+++ b/date_dirs.yml
@@ -1,4 +1,4 @@
-  - name: Get dirs to check date 
+  - name: Get dirs to check date   
     hosts: localhost
     #become: true
     become_user: root
@@ -10,28 +10,42 @@
         include_vars: users.yml
 
     tasks:
-      - name: make a list of dirs
+      - name: List of keys of present users
         ansible.builtin.stat:
           path: "keys/{{ item.username }}.pub"
-        with_items: "{{ users_list }}"
+        with_items: "{{ users_list}}"
         register: stat_result
 
+
       - set_fact:
-          dates: "{{ dates | default([]) + [{ 'time': item.stat.mtime, 
-          'name': item.stat.path | replace ('.pub', '')| split ('/') | last }] }}"
+          dates: "{{ dates | default([]) + [{ 'time': item.stat.mtime , 
+         'name': item.stat.path | replace ('.pub', '')| split ('/') | last  }] }}"
         with_items: "{{ stat_result.results }}"
+        when:  item.stat.exists
+ 
 
-      #- local_action: copy content={{ dates }} dest=dates/dates.yml
-
-        #| split('\').1 | replace('.pub', '') }} " }
+      - local_action: copy content={{ dates }} dest=dates/dates.yml
+        ignore_errors: yes
        
 
-      - name: Display the Dictionary
-        debug: var=dates
+        #- name: Display the Dictionary
+        #debug: var=dates
+        #
+        # - debug:
+        # var: stat_result
+        #
+        #
         #----------------JSON------------------------------
-        #- debug:
-        #  var: "stat_result.results[{{ item }}].stat.mtime"
-        #with_sequence: start=0 end=1
+        #
+        #
+        # - debug:
+        # var: "stat_result.results[{{ item }}].stat.mtime"
+        #with_sequence: start=0 end=2
+
+        # - debug:
+        #  var: "stat_result.results[1].skipped "
+        #with_sequence: start=0 end=2
+
         
 
       - name: Sending Emails to users whose keys need rotation
@@ -42,7 +56,7 @@
           from: administrator@ {{ ansible_hostname }}
           to: "{{ item.1.email }}"
           #cc: Charlie Root <root@localhost> #Repository administartor should be copied here.
-          subject: "Warning: SSH Key Rotation Required"
+          subject: "Warning: SSH Key Rotation is Required for {{ item.1.username }}"
           #body: Hello, this is an automatic email from System {{ ansible_hostname}}. Please generate a new SSH key-pair, following the instruction <link>. Access to the remove machines will be lost in one week. 
           body: "{{ lookup('file', 'email.html') }}"
           charset: utf8
@@ -51,7 +65,7 @@
         #debug:
           #var: item.1.username #will have to be changed to .email
         #var: item.time + 31556926  #send email here when condition 
-        when:  item.0.time <= (item.0.time + 31556926) #will need to be reversed, <= for testing purposes
+        when: item.1.state =='present' and item.0.time <= (item.0.time + 31556926) #will need to be reversed, <= for testing purposes
         #with_items: "{{ dates }}"
         loop: "{{ dates | zip (users_list) | list }}"
-    
+        ignore_errors: yes
