--- a/email_notifcation.yml
+++ b/email_notifcation.yml
@@ -1,4 +1,4 @@
-  - name: Get dirs to check date   
+  - name: Inpect date of public key modification and notify state=present users   
     hosts: localhost
     #become: true
     become_user: root
