--- a/users.yml
+++ b/users.yml
@@ -1,7 +1,7 @@
 users_list:
   - username: testuser
     type: admin
-    state: present
+    state: absent
     locked: false
     email: bogdana.hincean@expersoft.com
   - username: testuser1
@@ -11,6 +11,6 @@ users_list:
     email: bogdana.hincean@expersoft.com
   - username: testuser2 # same key as testuser
     type: normal
-    state: present
+    state: absent
     locked: false
     email: bogdana.hincean@expersoft.com
