--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -8,7 +8,7 @@
     #We will need to add community.general.mail not sure whether it is community.general or community.mail
     collections:
       - ansible.posix
-      - community.general
+     # - community.general
   
 
     pre_tasks:
