--- a/tmux_installation.yml
+++ b/tmux_installation.yml
@@ -1,8 +1,8 @@
 ---
 - name: Install TMUX if not already present
     hosts: all
-    become: true
-    #become_user: root
+    #become: true
+    become_user: root
     gather_facts: true
     collections:
       - ansible.posix
