--- a/cdu_users.yml
+++ b/cdu_users.yml
@@ -3,7 +3,7 @@
   - name: Create or delete users based on their state
     hosts: all
     # become: true
-    # become_user: root
+    become_user: root
     gather_facts: true
     #We will need to add community.general.mail not sure whether it is community.general or community.mail
     collections:
