--- a/tmux_installation.yml
+++ b/tmux_installation.yml
@@ -9,7 +9,7 @@
   
   pre_tasks:
     - name: Include the file containing the users to be added
-        include_vars: packages.yml
+      include_vars: packages.yml
 
   tasks:
   #Installing tmux package if necessary
@@ -17,4 +17,4 @@
       ansible.builtin.dnf:
         name: "{{ item.name }}"
         state: present
-      with_items: "{{ package_list }}"
+      with_items: "{{ packages_list }}"
