Update and rename tmux_installation.yml to package_installation.yml

--- a/package_installation.yml
+++ b/package_installation.yml
@@ -16,5 +16,5 @@
     - name: Installing tmux package if not present
       ansible.builtin.dnf:
         name: "{{ item.name }}"
-        state: present
+        state: "{{ item.state }}"
       with_items: "{{ packages_list }}"
