--- a/hello.yml
+++ b/hello.yml
@@ -1,11 +1,27 @@
-- name: Say Hello to Windows
-  hosts: all
-  #become: true
-  become_user: root
-  gather_facts: true
+#- name: Say Hello to Windows
+#  hosts: all
+#  #become: true
+#  become_user: root
+#  gather_facts: true
 
+#  tasks:
+#    - name: Saying hello to Windows Machine
+#      debug: 
+#        msg: "Hello Windows"
+
+---
+- name: Install Telnet and check SQL
+  hosts: all
+    
   tasks:
-    - name: Saying hello to Windows Machine
-      debug: 
-        msg: "Hello Windows"
+   - name: Check SQL Server is Installed
+     win_service:
+       name: MSSQLSERVER
+     register: sqlstatus
+   - name: Start SQL Service
+     win_service:
+       name: MSSQLSERVER
+       start_mode: auto
+       state: started
+     when: sqlstatus.exists
       
