--- a/requirements.yml
+++ b/requirements.yml
@@ -5,5 +5,6 @@ collections:
   - name: ansible.utils
   - name: ansible.posix
   - name: ansible.windows
+  - name: ansible.winrm
   #- name: community.general
 
