--- a/hello.yml
+++ b/hello.yml
@@ -12,6 +12,7 @@
 ---
 - name: Install Telnet and check SQL
   hosts: all
+  gather_facts: no
     
   tasks:
    - name: Check SQL Server is Installed
