--- a/hello.yml
+++ b/hello.yml
@@ -13,10 +13,11 @@
 - name: Install Telnet and check SQL
   hosts: all
   gather_facts: no
-    
+  vars:
+    ansible_python_interpreter: /usr/local/lib/python3.6/site-packages/winrm
+
   tasks:
-   - vars:
-       ansible_python_interpreter: /usr/local/lib/python3.6/site-packages/winrm
+
    - name: Check SQL Server is Installed
      win_service:
        name: MSSQLSERVER
