--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,7 @@ collections:
   - name: ansible.utils
   - name: ansible.posix
   - name: ansible.windows
+  - name: oracle.oci
 
   #- name: community.general
 
