--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,9 @@ collections:
   - name: ansible.utils
   - name: ansible.posix
   - name: ansible.windows
+community.general.python_requirements_info:
+  dependencies:
+      - pywinrm
  
   #- name: community.general
 
