--- a/requirements.yml
+++ b/requirements.yml
@@ -4,7 +4,7 @@
 collections:
   - name: ansible.utils
   - name: ansible.posix
-  - name: ansible.windows
+  #- name: ansible.windows
 
  
   #- name: community.general
